// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment generate env 1`] = `
Array [
  "eee=",
  "NODE_ENV=",
  "aaa=",
  "ccc=",
  "DATA_SYNC_NFT_ENABLED=",
  "DATA_SYNC_TRADE_ENABLED=",
  "DATA_SYNC_PYTH_ENABLED=",
]
`;

exports[`assignment generate env name 1`] = `
Object {
  "DATA_SYNC_NFT_ENABLED": "DATA_SYNC_NFT_ENABLED",
  "DATA_SYNC_PYTH_ENABLED": "DATA_SYNC_PYTH_ENABLED",
  "DATA_SYNC_TRADE_ENABLED": "DATA_SYNC_TRADE_ENABLED",
  "NODE_ENV": "NODE_ENV",
  "aaa": "aaa",
  "ccc": "ccc",
  "eee": "eee",
}
`;

exports[`call chaining generate env 1`] = `
Array [
  "// default=['111','222','333']",
  "bbb='111'",
  "// default=['111','222','333']",
  "ccc='111'",
  "ddd=",
  "// default=['']",
  "eee=",
]
`;

exports[`call chaining generate env name 1`] = `
Object {
  "bbb": "bbb",
  "ccc": "ccc",
  "ddd": "ddd",
  "eee": "eee",
}
`;
